# thermald-dock

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  thermald-dock.cpp  thermald-dock.hpp  thermald_dock.qrc
src/resources/: thermald-dock.xcf
